# FantasticGenetics

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  params.ini
headers/: BestOfSelection.hpp  Chromosome.hpp  ChromosomeFactory.hpp  CrossoverOperator.hpp  Enums.hpp  FitnessFunction.hpp  GAEngine.hpp  MaximizeOnesFitnessFunction.hpp  MutationOperator.hpp  Population.hpp  SelectionOperator.hpp  SinglepointCrossover.hpp  ThresholdSelection.hpp
lib/: ini_parser.hpp
src/: BestOfSelection.cpp  Chromosome.cpp  ChromosomeFactory.cpp  CrossoverOperator.cpp  FitnessFunction.cpp  GAEngine.cpp  MaximizeOnesFitnessFunction.cpp  MutationOperator.cpp  Population.cpp  SelectionOperator.cpp  SinglepointCrossover.cpp  ThresholdSelection.cpp
